test/lattests/extensions/objects1/bad/parameterOfNonexistentType.lat
void foo (a a) {
}

int main() { return 0; }